# rs_node

./: .gitignore  .release.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  amadeusd.manifest.template  deny.toml
.cargo/: config.toml
amadeus-cli/: Cargo.toml  README.md
amadeus-cli/src/: main.rs
amadeus-consensus/: Cargo.toml
amadeus-consensus/src/: lib.rs
amadeus-consensus/src/consensus/: consensus_apply.rs
amadeus-node/: Cargo.toml  README.md
amadeus-node/src/: attestation.rs  config.rs  context.rs  kv.rs  lib.rs  metrics.rs  socket.rs
amadeus-node/src/bic/: base.rs  coin.rs  coin_symbol_reserved.rs  contract.rs  epoch.rs  mod.rs  sol.rs  sol_difficulty.rs  sol_protocol.rs
amadeus-node/src/consensus/: agg_sig.rs  consensus.rs  fabric.rs  genesis.rs  kv.rs  mod.rs  test_mutations_hash.rs  tx_filter.rs
amadeus-node/src/consensus/doms/: attestation.rs  entry.rs  mod.rs  sol.rs  tx.rs
amadeus-node/src/consensus/tests/: 34076357.rs  34076383.rs
amadeus-node/src/node/: anr.rs  mod.rs  peers.rs  protocol.rs  reassembler.rs  txpool.rs
amadeus-node/src/node/anr/: test_anr_signature.rs
amadeus-node/src/utils/: compression.rs  misc.rs  rocksdb.rs  safe_etf.rs
amadeus-node/src/wasm/: base.rs  runtime.rs  tests.rs
amadeus-node/tests/: config_test.rs
amadeus-runtime/: Cargo.toml  README.md
amadeus-runtime/src/: apply_entry.rs  kv.rs  lib.rs
amadeus-runtime/src/bic/: coin.rs  contract.rs  epoch.rs  mod.rs  sol.rs
amadeus-runtime/src/consensus/: aggsig.rs  bls12_381.rs  consensus_apply.rs  consensus_kv.rs  consensus_muts.rs  mod.rs
amadeus-runtime/src/consensus/bic/: coin.rs  coin_symbol_reserved.rs  contract.rs  epoch.rs  epoch.rs.bak2  lockup.rs  lockup_prime.rs  mod.rs  protocol.rs  sol.rs  sol_bloom.rs  wasm.rs
amadeus-runtime/src/consensus/wasm/: mod.rs
amadeus-runtime/src/wasm/: base.rs  runtime.rs  tests.rs
amadeus-sdk/: Cargo.toml
amadeus-sdk/examples/: counter.rs  token.rs
amadeus-sdk/src/: env.rs  host.rs  lib.rs  memory.rs  storage.rs  types.rs
amadeus-utils/: Cargo.toml  README.md
amadeus-utils/src/: archiver.rs  b3f4.rs  blake3.rs  bls12_381.rs  constants.rs  database.rs  lib.rs  misc.rs  rocksdb.rs  safe_etf.rs  types.rs  vecpak.rs  vecpak_compat.rs  version.rs
amadeus-utils/src/vecpak/: de.rs  error.rs  ext.rs  mod.rs  ser.rs
amadeusd/: Cargo.toml  README.md
assets/rocksdb/: README.md  consensus28812309  entry28812308  entry28812309
assets/rocksdb/28812308/: IDENTITY  LOG.old.1760396061215044  MANIFEST-000009  OPTIONS-000007  OPTIONS-000011
assets/rocksdb/34076356/: IDENTITY  LOG.old.1760495474510814  LOG.old.1760576363482011  MANIFEST-000009  OPTIONS-000007  OPTIONS-000011  next_logs  next_muts  next_muts_rev
assets/rocksdb/34076356/fabric/: IDENTITY  LOG.old.1760719609364832  MANIFEST-000009
assets/rocksdb/34076382/: IDENTITY  LOG.old.1760650572307798  MANIFEST-000009  OPTIONS-000007  next_logs  next_muts  next_muts_rev
assets/rocksdb/34076382/fabric/: IDENTITY  LOG.old.1760717791071238  MANIFEST-000009  OPTIONS-000011
assets/rocksdb/34076432/: next_logs  next_muts  next_muts_rev
assets/rocksdb/34076432/fabric/: IDENTITY  LOG.old.1760720391722140  MANIFEST-000009
assets/rocksdb/34099998/: next_logs  next_muts  next_muts_rev
assets/rocksdb/34099998/fabric/: IDENTITY  LOG.old.1761354824975190  MANIFEST-000009  OPTIONS-000007  OPTIONS-000011
client/: Cargo.toml  README.md
client/src/: dump_replay.rs  lib.rs
core/: Cargo.toml  README.md
core/src/: config.rs  context.rs  lib.rs  metrics.rs  socket.rs
core/src/bic/: base.rs  coin.rs  contract.rs  epoch.rs  mod.rs  sol.rs  sol_difficulty.rs
core/src/consensus/: agg_sig.rs  attestation.rs  consensus.rs  entry.rs  fabric.rs  fabric_cleaner.rs  genesis.rs  kv.rs  mod.rs
core/src/consensus/doms/: attestation.rs  entry.rs  mod.rs  tx.rs
core/src/node/: anr.rs  anr_manager.rs  broadcast.rs  mod.rs  msg_encrypted.rs  msg_v2.rs  node_gen.rs  packet_handler.rs  peers.rs  protocol.rs  reassembler.rs  socket_gen.rs  state.rs  txpool.rs
core/src/utils/: archiver.rs  blake3.rs  bls12_381.rs  compression.rs  etf_small_atoms.rs  ip_resolver.rs  misc.rs  mod.rs  old_rocksdb.rs  rocksdb.rs  safe_etf.rs  system_metrics.rs  version.rs
core/src/wasm/: runtime.rs  safe.rs  tests.rs
core/tests/: common.rs  config_test.rs
docs/: CONSENSUS.md  NOVA_AI.md  PROTOCOL.md  SGX.md  WIREGUARD.md  openapi.yaml
http/: Cargo.toml  README.md
http/src/: lib.rs  models.rs  openapi.rs  utils.rs
http/src/routes/: advanced.rs  dashboard.rs  entries.rs  errors.rs  incoming.rs  mod.rs  network.rs  not_found.rs  outgoing.rs  peers.rs
http/src/routes/api/: attestation.rs  chain.rs  contract.rs  epoch.rs  mod.rs  peer.rs  transaction.rs  wallet.rs
http/src/views/: advanced.rs  dashboard.rs  entries.rs  errors.rs  incoming.rs  metrics.rs  network.rs  not_found.rs  outgoing.rs  peers.rs
http/static/: dashboard.html  simple-dashboard.html
http/tests/: openapi_test.rs
scripts/: compile-contracts.sh  rewrite-pcaps.sh  setup-tee.sh
