[workspace]
resolver = "3"

members = ["amadeus-utils", "amadeus-runtime", "amadeus-node", "amadeus-cli", "amadeusd", "http"]

[workspace.package]
version = "1.3.2"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/amadeusprotocol/rs_node"

[workspace.metadata.release]
# Shared version across all publishable crates
shared-version = true
# Sign commits and tags (requires GPG setup)
sign-commit = true
sign-tag = true
# Tag format for releases
tag-name = "v{{version}}"
# Consolidated commit for workspace releases
consolidate-commits = true
pre-release-commit-message = "chore: Release v{{version}}"
