[package]
name = "amadeus-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for interacting with the Amadeus blockchain"
keywords = ["blockchain", "cli", "amadeus", "cryptocurrency", "web3"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]
readme = "README.md"

[[bin]]
name = "ama"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
bs58 = "0.5.1"
anyhow = "1.0.99"
amadeus-node = { path = "../amadeus-node", version = "1.3.4" }
amadeus-utils = { path = "../amadeus-utils", version = "1.3.4" }
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0.143"
clap = { version = "4.5.46", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }

[package.metadata.release]
release = true
