[package]
name = "amadeus-node"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The core library for the Amadeus blockchain node, containing consensus, networking and runtime"

[lib]
doctest = false

[dependencies]
eetf = "0.11.0"
num-traits = "0.2.19"
flate2 = { version = "1.1.4", features = ["zlib"] }
tokio = { version = "1.47.1", features = ["full"] }
bs58 = "0.5.1"
reed-solomon-simd = { version = "3.0.1", git = "https://github.com/AndersTrier/reed-solomon-simd" }
bincode = { version = "=2.0.1", features = ["derive"] } # pinned for snapshots compatibility
blake3 = "1.8.2"
bls12_381 = { version = "0.8.0", git = "https://github.com/vans163/bls12_381" }
sha2 = "0.10.9"
blst = "0.3.16"
thiserror = "2.0.17"
group = "0.13.0"
once_cell = "1.19.0"
rust-rocksdb = { version = "0.43.0", git = "https://github.com/zaidoon1/rust-rocksdb", default-features = false, features = ["lz4", "snappy"] }
tracing = { version = "0.1.41", default-features = false, features = ["std", "attributes"] }
async-trait = "0.1.89"
wasmer = { version = "4.4.0", features = ["cranelift"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.15.0"
serde_json = "1.0.145"
hex = "0.4.3"
scc = "3.3.1"
strum_macros = "0.27.2"
aes-gcm = "0.10"
sysinfo = { version = "0.37.2", optional = true }

[features]
default = []
rayon = ["blake3/rayon"] # quick way to enable rayon, may not need it
system-metrics = ["dep:sysinfo"] # needs OS-specific dependencies
