[package]
name = "amadeus-node"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The core library for the Amadeus blockchain node, containing consensus, networking and runtime"
keywords = ["blockchain", "node", "amadeus", "consensus", "networking"]
categories = ["cryptography::cryptocurrencies", "network-programming"]

[lib]
doctest = false

[dependencies]
amadeus-utils = { path = "../amadeus-utils", version = "1.2.5", features = ["system-metrics"] }
amadeus-runtime = { path = "../amadeus-runtime", version = "1.2.5" }
eetf = "0.11.0"
once_cell = "1.19.0"
blake3 = "1.8.2"
tokio = { version = "1.47.1", features = ["full"] }
bs58 = "0.5.1"
bincode = { version = "=2.0.1", features = ["derive"] } # pinned for snapshots compatibility
tracing = { version = "0.1.41", default-features = false, features = ["std", "attributes"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.15.0"
serde_json = "1.0.145"
hex = "0.4.3"
scc = "3.3.1"
strum_macros = "0.27.2"
aes-gcm = "0.10"
bitvec = "1.0.1"
rand = "0.9.2"
async-trait = "0.1.89"
thiserror = "2.0.17"
sha2 = "0.10.9"
zstd = "0.13.3"
serde_bytes = "0.11.19"
ambassador = "0.4.2"

[features]
default = []
system-metrics = ["amadeus-utils/system-metrics"]
