[package]
name = "amadeus-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SDK for building smart contracts on the Amadeus blockchain"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = []
wasm-examples = []

# These examples are WASM-only (no_std, no_main) - build with:
# cargo build --example counter --target wasm32-unknown-unknown --features wasm-examples
[[example]]
name = "counter"
required-features = ["wasm-examples"]

[[example]]
name = "token"
required-features = ["wasm-examples"]
