[package]
name = "amadeus-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Utility library for the Amadeus blockchain including cryptography, serialization, and data persistence"

[lib]
doctest = false

[dependencies]
blake3 = "1.8.2"
bls12_381 = { version = "0.8.0", git = "https://github.com/vans163/bls12_381" }
blst = "0.3.16"
group = "0.13.0"
once_cell = "1.19.0"
reed-solomon-simd = { version = "3.0.1", git = "https://github.com/AndersTrier/reed-solomon-simd" }
thiserror = "2.0.17"
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0.145"
hex = "0.4.3"
eetf = "0.11.0"
flate2 = { version = "1.1.4", features = ["zlib"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = { version = "0.1.41", default-features = false, features = ["std", "attributes"] }
sysinfo = { version = "0.37.2", optional = true }
bitvec = "1.0.1"
rand = "0.9.2"
num-bigint = "0.4.6"
num-traits = "0.2.19"
bincode = { version = "=2.0.1", features = ["derive"] }
bs58 = "0.5.1"
vecpak = { git = "https://github.com/amadeusprotocol/chain", package = "vecpak" }

[dependencies.rust-rocksdb]
git = "https://github.com/vans163/rust-rocksdb"
rev = "b3e3f248ecc1b47be3e77aa99e5aa60129e606b8"
default-features = false
features = ["zstd", "zstd-static-linking-only", "multi-threaded-cf"]


[dependencies.rust-librocksdb-sys]
git = "https://github.com/vans163/rust-rocksdb"
rev = "b3e3f248ecc1b47be3e77aa99e5aa60129e606b8"

[dev-dependencies]
jemallocator = "0.5.4"

[features]
default = []
rayon = ["blake3/rayon"]
system-metrics = ["dep:sysinfo"]
