[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
bs58 = "0.5.1"
anyhow = "1.0.99"
ama_core = { workspace = true }
http = { workspace = true }
hex = "0.4.3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
console-subscriber = { version = "0.4", optional = true }
serde_json = "1.0.143"
bincode = "2.0.1"
clap = { version = "4.5.46", features = ["derive"] }
async-trait = "0.1.89"
tracing = "0.1.41"

[features]
default = []
tokio-tracing = ["dep:console-subscriber", "tokio/tracing"]