[package]
name = "client"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
bs58 = "0.5.1"
anyhow = "1.0.99"
ama_core = { workspace = true }
http = { workspace = true }
hex = "0.4.3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
console-subscriber = { version = "0.4", optional = true }
serde_json = "1.0.143"
bincode = "2.0.1"
clap = { version = "4.5.46", features = ["derive"] }
async-trait = "0.1.89"
tracing = "0.1.41"
jemallocator = "0.5.4"
jemalloc-ctl = { version = "0.5.4", optional = true }
reqwest = { version = "0.12", features = ["json"] }

[features]
default = ["system-metrics"]
system-metrics = ["ama_core/system-metrics"]
debugging = ["dep:console-subscriber", "dep:jemalloc-ctl", "tokio/tracing"]