[package]
name = "client"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
bs58 = "0.5.1"
anyhow = "1.0.99"
amadeus-node = { path = "../amadeus-node" }
http = { path = "../http" }
hex = "0.4.3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
console-subscriber = { version = "0.4", optional = true }
serde_json = "1.0.143"
bincode = "2.0.1"
clap = { version = "4.5.46", features = ["derive"] }
async-trait = "0.1.89"
tracing = "0.1.41"
jemallocator = "0.5.4"
jemalloc-ctl = { version = "0.5.4", optional = true }
reqwest = { version = "0.12", features = ["json"] }

[features]
default = ["system-metrics"]
debugging = ["dep:console-subscriber", "dep:jemalloc-ctl", "tokio/tracing"]
system-metrics = ["amadeus-node/system-metrics"]
