[package]
name = "dashboard"
version = "0.1.0"
edition = "2024"

[lib]
name = "http"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
axum = { version = "0.8.4", features = ["macros", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.98"
tracing = "0.1.41"
tower-http = { version = "0.6", features = ["fs", "trace", "timeout"] }
ama_core = { path = "../core" }
