[package]
name = "dashboard"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[lib]
name = "http"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
axum = { version = "0.8.4", features = ["macros", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.98"
tracing = "0.1.41"
tower-http = { version = "0.6", features = ["fs", "trace", "timeout"] }
bs58 = "0.5"
ama_core = { workspace = true }
utoipa = { version = "5.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8.0", features = ["axum"] }
serde_yaml = "0.9"
