[package]
name = "http"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum = { version = "0.8.4", features = ["macros", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.98"
tracing = "0.1.41"
tower-http = { version = "0.6", features = ["fs", "trace", "timeout"] }
bs58 = "0.5"
amadeus-node = { path = "../amadeus-node" }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
serde_yaml = "0.9"
